<resources>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_name">CikGood</string>
    <string name="title_shop">Shop</string>
    <string name="title_gifts">Gifts</string>
    <string name="title_cart">Cart</string>
    <string name="title_profile">Profile</string>
    <string name="profile_fragment">My Profile</string>
    <string name="store_fragment">My Store</string>
    <string name="title_activity_maps">Map</string>
    <string name="Lat">Latitude</string>
    <string name="Lng">Longitude</string>
    <string name="Add">Nama</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="nama">Nama Lengkap</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">SIGN IN</string>
    <string name="btn_sign_in_fb">SIGN IN WITH FACEBOOK</string>
    <string name="btn_sign_in_g">SIGN IN WITH GOOGLE</string>
    <string name="btn_link_to_register">Not a member? Get registered in Cikgood now!</string>
    <string name="btn_link_to_login">Sudah Mendaftar. Login!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Lupa Password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_feedback"><![CDATA[Help & Feedback]]></string>
    <string name="action_settings">Settings</string>
    <string name="action_leave">Sign out</string>
    <string name="facebook_app_id">335706460584535</string>
    <string name="fb_login_protocol_scheme">fb335706460584535</string>
    <string name="cancel_login">Login Canceled</string>
    <string name="error_login">Login Errors</string>
    <string name="firebase_error_login">Firebase Error</string>
    <string name="facebook_status_fmt">Facebook Status</string>
    <string name="firebase_status_fmt">Firebase Status</string>
    <string name="action_search">Cari</string>
    <string name="notif">Notifikasi</string>
    <string name="title_activity_cari_guru">CariGuru</string>
    <string name="bio">Biodata</string>
    <string name="pend">Pendidikan</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="no_hp">Nomor Handphone</string>
    <string name="edit">Edit</string>
    <string name="alamat">Alamat Lengkap</string>
    <string name="jk">Jenis Kelamin</string>
    <string name="lk">Laki-laki</string>
    <string name="pr">Perempuan</string>
    <string name="nisn">NISN</string>
    <string name="kelas">Kelas</string>
    <string name="nama_sekolah">Nama Sekolah</string>
    <string name="photo_profile">Photo Profile</string>
    <string name="string_choose_file">Chouse Image</string>
    <string name="string_upload_image">Upload Images</string>
    <string name="string_view_image">View Images</string>
    <string name="password">Password</string>
    <string name="chat">Chating</string>
    <string name="tingkatan">Pilih Tingkatan</string>
    <string name="matpel">Pilih Mata Pelajaran</string>
    <string name="kabupaten">Pilih Kabupaten</string>
    <string name="cariguru">Cari Guru</string>
    <string name="lokasi_mengajar">Mengajar di Kota</string>
    <string name="lulusan">Lulusan dari</string>
    <string name="peng_kerja">Pengalaman Kerja</string>
    <string name="peng_mengajar">Pengalaman Mengajar</string>
    <string name="pesan_tambahan">Pesan Tambahan</string>
    <string name="durasi_per_pertemuan">Durasi Pertemuan</string>
    <string name="jumlah_per_min">Jumlah Pertemuan</string>
    <string name="tambahan">Pesan Tambahan</string>
    <string name="pesan">Pesan</string>
    <string name="text_dash">-</string>
    <string name="text_profile_picture">Profile Picture</string>
    <string name="text_good_afternoon">Good Afternoon</string>
    <string name="text_good_evening">Good Evening</string>
    <string name="text_good_night">Good Night</string>
    <string name="text_good_morning">Good Morning</string>
    <array name="spinner">
        <item>Airtel</item>
        <item>Vodafone</item>
        <item>Reliance</item>
        <item>Aircel</item>
        <item>BSNL</item>
    </array>
    <string-array name="types">
        <item>Mobile</item>
        <item>Office</item>
        <item>Home</item>
    </string-array>
    <string name="title_activity_add_remove_dynamic">AddRemoveDynamicActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="text_signin">SIGN IN</string>
    <string name="new_account">NEW ACCOUNT</string>
    <string name="signup">Sign Up</string>
    <string name="loginfailed">Login Failed, Try Again !!</string>
    <string name="loginsuccess">Login Success</string>
    <string name="login">Login</string>
    <string name="cari_guru">Cari Guru Anda Disini</string>
    <string name="pilihmatpel">Pilih Mata Pelajaran</string>
    <string name="pesantambahan">Pesan Tambahan</string>
    <string name="tglmulai">Tanggal Mulai</string>
    <string name="hari">Waktu belajar (Hari) per minggu</string>
    <string name="jam">Waktu belajar (Jam) per minggu</string>
    <string name="pwdlama">Password Lama</string>
    <string name="pwdbaru">Password Baru</string>
    <string name="pwdbarulagi">Ulangi Password Baru</string>
    <string name="ubahpwd">Ubah Password</string>
    <string name="edit_akun">Edit Akun</string>
    <string name="logout">Log Out</string>
    <string name="text_forgot_pwd">Lupa Password?</string>
    <string name="selanjutnya">Selanjutnya</string>
    <string name="buat_pesanan">Buat Pesanan</string>
    <string name="ringkasan_belanja">Ringkasan Pemesanan</string>
    <string name="total_petemuan">Total Pertemuan</string>
    <string name="durasi">Durasi</string>
    <string name="total_harga">Total Harga</string>
    <string name="tambah_jadwal">Tambah Jadwal</string>
    <string name="metode_pembayaran">Metode Pembayaran</string>
    <string name="pilih_pembayaran">Pilih Pembayaran</string>
    <string name="total_durasi">Total Durasi</string>
    <string name="text_reset">Reset</string>
    <string name="text_email_address">Email Address</string>
    <string name="update">Update</string>
    <string name="text_password">Password</string>
    <string name="text_nama_lengkap">Nama Lengkap</string>
    <string name="text_no_hp">No Handphone</string>
    <string name="text_nama_sekolah">Nama Sekolah</string>
    <string name="text_change_photo">Change</string>
    <string name="text_jk">Jenis Kelamin</string>
    <string name="text_male">Laki-Laki</string>
    <string name="text_female">Perempuan</string>
    <string name="text_edit_profile">Edit Profile</string>
    <string name="text_pem_total">Total</string>
    <string name="pencarian_guru">Pencarian Guru</string>
    <string name="text_cari">Cari</string>
    <string name="pemesanan">Pemesanan</string>
    <string name="jadwal">Jadwal</string>
    <string name="agama">Agama</string>
    <string name="profile">Profile</string>
    <string name="text_ringkasan_pemesanan">Ringkasan Pemesanan</string>
    <string name="text_tanggal_pemesanan">Tanggal Pemesanan</string>
    <string name="text_jadwal">Jadwal</string>
    <string name="text_pesanan_detail">Pesanan Detail</string>
    <string name="text_detil_pesanan">Detail Pemesanan</string>
    <string name="text_dont_have_an_account">Belum punya akun?</string>
    <string name="text_register_now">Daftar sekarang</string>

    <string-array name="jk">
        <item>Laki-Laki</item>
        <item>Perempuan</item>
    </string-array>
</resources>
