<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    android:id="@+id/layoutParent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorBackgroundPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:background="@color/colorBackgroundSecondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleTextColor="@android:color/white"
            app:popupTheme="@style/MenuStyle">

            <TextView
                android:fontFamily="@font/googlesans_bold"
                android:id="@+id/toolbarTitle"
                android:textStyle="bold"
                android:textSize="@dimen/text_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_edit_profile"
                android:gravity="left"
                android:textColor="@color/colorTextAccent" />

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bar_layout"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="16dp">

        <LinearLayout
            style="@style/AppTheme.Layout.Parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/layoutForm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    style="@style/AppTheme.Layout.Parent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_round"
                    android:orientation="vertical"
                    android:paddingBottom="40dp"
                    app:layout_constraintTop_toTopOf="parent">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/imageProfile"
                        android:layout_width="@dimen/profile_picture_big"
                        android:layout_height="@dimen/profile_picture_big"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/component_medium"
                        android:background="@drawable/shape_circle_placeholder"
                        android:contentDescription="@string/text_profile_picture" />

                    <Button
                        android:id="@+id/buttonChangePhoto"
                        style="@style/AppTheme.Button"
                        android:layout_width="150dp"
                        android:layout_height="@dimen/input_height"
                        android:layout_gravity="center"
                        android:layout_marginBottom="@dimen/component_big"
                        android:background="@color/colorTransparent"
                        android:paddingStart="@dimen/component_extra_big"
                        android:paddingEnd="@dimen/component_extra_big"
                        android:text="@string/text_change_photo"
                        android:textAllCaps="true"
                        android:textColor="@color/colorButtonPrimary"
                        android:textSize="@dimen/text_small" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/component_medium"
                        android:layout_marginBottom="@dimen/component_small"
                        android:text="@string/text_email_address"
                        android:textColor="@color/colorTextPrimary"
                        android:textSize="@dimen/text_small" />

                    <EditText
                        android:id="@+id/et_email"
                        style="@style/AppTheme.EditText.Secondary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/component_small"
                        android:background="@drawable/input_secondary"
                        android:drawablePadding="@dimen/component_medium"
                        android:fontFamily="@font/googlesans_regular"
                        android:hint="Email"
                        android:inputType="textEmailAddress"
                        android:lines="1" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/component_medium"
                        android:layout_marginBottom="@dimen/component_small"
                        android:text="@string/text_nama_lengkap"
                        android:textColor="@color/colorTextPrimary"
                        android:textSize="@dimen/text_small" />

                    <EditText
                        android:id="@+id/et_nama_lengkap"
                        style="@style/AppTheme.EditText.Secondary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/component_small"
                        android:background="@drawable/input_secondary"
                        android:drawablePadding="@dimen/component_medium"
                        android:fontFamily="@font/googlesans_regular"
                        android:hint="@string/nama_lengkap"
                        android:inputType="textPersonName"
                        android:lines="1" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/component_medium"
                        android:layout_marginBottom="@dimen/component_small"
                        android:text="@string/text_no_hp"
                        android:textColor="@color/colorTextPrimary"
                        android:textSize="@dimen/text_small" />

                    <EditText
                        android:id="@+id/et_no_hp"
                        style="@style/AppTheme.EditText.Secondary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/component_small"
                        android:background="@drawable/input_secondary"
                        android:drawablePadding="@dimen/component_medium"
                        android:fontFamily="@font/googlesans_regular"
                        android:hint="@string/no_hp"
                        android:inputType="number"
                        android:lines="1" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/component_medium"
                        android:layout_marginBottom="@dimen/component_small"
                        android:text="@string/nisn"
                        android:textColor="@color/colorTextPrimary"
                        android:textSize="@dimen/text_small" />

                    <EditText
                        android:id="@+id/et_nisn"
                        style="@style/AppTheme.EditText.Secondary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/component_small"
                        android:background="@drawable/input_secondary"
                        android:drawablePadding="@dimen/component_medium"
                        android:fontFamily="@font/googlesans_regular"
                        android:hint="@string/nisn"
                        android:inputType="number"
                        android:lines="1" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/component_medium"
                        android:layout_marginBottom="@dimen/component_small"
                        android:text="@string/kelas"
                        android:textColor="@color/colorTextPrimary"
                        android:textSize="@dimen/text_small" />

                    <EditText
                        android:id="@+id/et_kelas"
                        style="@style/AppTheme.EditText.Secondary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/component_small"
                        android:background="@drawable/input_secondary"
                        android:drawablePadding="@dimen/component_medium"
                        android:fontFamily="@font/googlesans_regular"
                        android:hint="@string/kelas"
                        android:inputType="text"
                        android:lines="1" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/component_medium"
                        android:layout_marginBottom="@dimen/component_small"
                        android:text="@string/text_nama_sekolah"
                        android:textColor="@color/colorTextPrimary"
                        android:textSize="@dimen/text_small" />

                    <EditText
                        android:id="@+id/et_nama_sekolah"
                        style="@style/AppTheme.EditText.Secondary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/component_small"
                        android:background="@drawable/input_secondary"
                        android:drawablePadding="@dimen/component_medium"
                        android:fontFamily="@font/googlesans_regular"
                        android:hint="@string/nama_sekolah"
                        android:inputType="text"
                        android:lines="1" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/component_medium"
                        android:layout_marginBottom="@dimen/component_small"
                        android:text="@string/text_jk"
                        android:textColor="@color/colorTextPrimary"
                        android:textSize="@dimen/text_small" />

                    <RadioGroup
                        android:id="@+id/radioGroupSex"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/radioMale"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="-6dp"
                            android:layout_marginEnd="@dimen/component_medium"
                            android:paddingEnd="@dimen/component_medium"
                            android:text="@string/text_male"
                            android:textColor="@color/colorTextSecondary"
                            android:textSize="@dimen/text_small"
                            tools:ignore="RtlSymmetry" />

                        <RadioButton
                            android:id="@+id/radioFemale"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingEnd="@dimen/component_medium"
                            android:text="@string/text_female"
                            android:textColor="@color/colorTextSecondary"
                            android:textSize="@dimen/text_small"
                            tools:ignore="RtlSymmetry" />
                    </RadioGroup>

                </LinearLayout>

                <Button
                    android:id="@+id/btn_update_profile"
                    style="@style/AppTheme.Button"
                    android:layout_width="150dp"
                    android:layout_height="@dimen/input_height"
                    android:layout_gravity="center"
                    android:layout_marginTop="-20dp"
                    android:background="@drawable/button_primary"
                    android:fontFamily="@font/googlesans_bold"
                    android:paddingStart="@dimen/component_extra_big"
                    android:paddingEnd="@dimen/component_extra_big"
                    android:text="@string/update"
                    android:textAllCaps="true"
                    android:textSize="@dimen/text_small" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</android.support.constraint.ConstraintLayout>